[metadata]
name = flask-api
version = 1.0.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs

[mypy]
python_version = 3.12
disallow_untyped_calls = True
disallow_untyped_defs = True
ignore_missing_imports = True

[tool.isort]
profile = "black"

[pylama]
linters = mccabe, pycodestyle, pyflakes, pylint, mypy

[tool:pytest]
addopts = --cov=flask_api --cov-report=term-missing
    --cov-fail-under=95

[coverage:run]
branch = True
source = flask_api

[coverage:report]
show_missing = True
skip_covered = True
